Spec Issue 27196: Add columns/horizontal scrolling  - Refactor to combine filterConfig and altFilterConfigs into filterConfigSet  - Changed size of dropdown menu selector in new Filter UI to fit when a scroll bar is necessary

--- a/app/Connector/packages/connector-theme/sass/var/view/_Learn.scss
+++ b/app/Connector/packages/connector-theme/sass/var/view/_Learn.scss
@@ -594,7 +594,7 @@ div.list-container {
     width: 21px!important;
     height: 21px!important;
     top: 26px!important;
-    left: 244px!important;
+    left: 228px!important;
   }
 
   .sorter {
@@ -616,7 +616,7 @@ div.list-container {
       border: 1px solid $gray-6;
       line-height: 22px;
       height: 32px;
-      width: 270px;
+      width: 253px;
     }
 
     @include smallStandout;
